# sidebar_collapsed_default

./: README.md  pyproject.toml
sidebar_collapsed_default/: hooks.py  modules.txt
sidebar_collapsed_default/public/js/: collapse_sidebar.bundle.js  collapse_sidebar.js
